Overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ html {
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    overflow: hidden;
 }
 
 #card-logo {
